--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "https://github.com/julianvanost/react-portfolio-update.git",
+  "homepage": "https://julianvanost.github.io/react-portfolio-update",
   "browserslist": {
     "production": [
       ">0.2%",
